# bunker-generator

./: .gitignore  README.md  cards.json  pyproject.toml  requirements.txt  setup.cfg
bunker/: __init__.py  __main__.py  generator.py  player.html
bunker/decks/: original_ru.json
bunker/templates/: board.html  profile.html
bunker/templates/en/: profile.html
bunker/templates/html/: board.html  profile.html
bunker/templates/ru/: profile.html
bunker/templates/txt/: board.txt  profile.txt
decks/: original_ru.json
tests/: conftest.py  test_cli.py  test_generator.py
